--- a/package.json
+++ b/package.json
@@ -16,4 +16,16 @@
   ],
   "author": "Ivan Smirnov",
   "license": "MIT"
+  "devDependencies": {
+    "babel": "^5.8.23",
+    "chai": "^3.2.0",
+    "classnames": "^2.1.3",
+    "enum": "^2.1.0",
+    "isparta": "^3.0.4",
+    "mocha": "^2.2.5",
+    "mocha-babel": "^3.0.0",
+    "node-jsdom": "^3.1.5",
+    "react": "^0.13.3",
+    "underscore": "^1.8.3"
+  }
 }
