--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "component"
   ],
   "author": "Ivan Smirnov",
-  "license": "MIT"
+  "email": "i.s.smirnov@gmail.com",
+  "license": "(MIT OR Apache-2.0)",
   "devDependencies": {
     "babel": "^5.8.23",
     "chai": "^3.2.0",
