--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "semantic-ui-react",
   "version": "0.1.0",
   "description": "React components for Semantic UI",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
