--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "test": "./node_modules/.bin/mocha --opts ./test/mocha.opts",
-    "coverage": "./node_modules/.bin/babel-node ./node_modules/.bin/isparta cover _mocha"
+    "coverage": "./node_modules/.bin/babel-node ./node_modules/.bin/isparta cover _mocha",
+    "lint": "./node_modules/.bin/eslint src"
   },
   "keywords": [
     "semantic-ui",
@@ -20,9 +21,12 @@
   "license": "(MIT OR Apache-2.0)",
   "devDependencies": {
     "babel": "^5.8.23",
+    "babel-eslint": "^4.1.2",
     "chai": "^3.2.0",
     "classnames": "^2.1.3",
     "enum": "^2.1.0",
+    "eslint": "^1.4.3",
+    "eslint-plugin-react": "^3.3.2",
     "isparta": "^3.0.4",
     "mocha": "^2.3.2",
     "mocha-babel": "^3.0.0",
