--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "./node_modules/.bin/mocha --opts ./test/mocha.opts",
     "coverage": "./node_modules/.bin/babel-node ./node_modules/.bin/isparta cover _mocha",
-    "lint": "./node_modules/.bin/eslint src"
+    "lint": "./node_modules/.bin/eslint src test"
   },
   "keywords": [
     "semantic-ui",
