--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "./node_modules/.bin/mocha --opts ./test/mocha.opts",
-    "coverage": "./node_modules/.bin/babel-node ./node_modules/.bin/isparta cover _mocha",
+    "cover": "./node_modules/.bin/babel-node ./node_modules/.bin/isparta cover _mocha",
     "lint": "./node_modules/.bin/eslint src test"
   },
   "keywords": [
